# build-fellowship-ai-assistant

./: .gitignore  PLAN.md  README.md  main.py  pyproject.toml  test_setup.py
.planning/: ROADMAP.md  STATE.md
.planning/phases/01-curriculum-documentation-demo-infrastructure/: 01-01-SUMMARY.md
.planning/phases/02-workshop-2-materials/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-workshop-3-materials/: 03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/03.1-w3-notebook-polish-discovery-framing/: 03.1-01-SUMMARY.md  03.1-RESEARCH.md
.planning/phases/03.2-w3-data-continuity-connect-structured-extraction-to-agent-tools/: 03.2-01-PLAN.md  03.2-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
curriculum/: CURRICULUM.md
demo/: .gitignore  README.md  demo.py  pyproject.toml
demo/analytics_assistant/: agent.py  cli.py  executor.py  memory.py  prompts.py
demo/analytics_assistant/tools/: __init__.py  analytics.py  base.py  dataset.py
demo/data/: customers.csv  ecommerce_sales.csv
demos/: index.html  package-lock.json  package.json  tailwind.config.js
demos/src/app/: App.tsx  DemoLayout.tsx  DemoRegistry.ts  (+1 more)
notebooks/: download_dataset.sh  workshop_02_prompt_engineering.ipynb  workshop_03_building_ai_agents_foundations.ipynb  workshop_04_tool_design_for_agents.ipynb  workshop_05_react_and_code_agents.ipynb  workshop_06_memory_and_conversations.ipynb
notebooks/utils/: __init__.py  display.py
(+32 files in other folders)
