[project]
name = "analytics-assistant"
version = "1.0.0"
description = "General-purpose CSV analytics agent with ReAct loop and code generation"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pydantic>=2.0.0",
    "RestrictedPython>=7.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
